--- a/.example.env
+++ b/.example.env
@@ -1,1 +1,3 @@
 MONGO_URI=mongodb+srv://dinuthlahiru:dinuthlahiru@cluster0.3xgqo.mongodb.net/aitravel?retryWrites=true&w=majority
+SECRET_STR='DINUTH1234'
+LOGIN_EXPIRES = 30d  # 30 days
